# iil-ingest

./: .gitignore  CHANGELOG.md  README.md  catalog-info.yaml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.windsurf/rules/: project-facts.md
ingest/: __init__.py  classifier.py  detector.py  pipeline.py  registry.py  types.py
ingest/django/: mixins.py
ingest/extractors/: base.py  csv.py  docx.py  excel.py  ocr.py  pdf.py
ingest/profiles/: german_hr.py
tests/: test_classifier.py  test_csv_extractor.py  test_detector.py  test_django_mixin.py  test_extractors_optional.py  test_ocr_extractor.py  test_pipeline.py  test_profiles_german_hr.py  test_registry.py  test_types.py
