[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iil-ingest"
version = "0.1.0"
description = "Reusable Document Ingestion Package for IIL Platform (ADR-170)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Achim Dehnert" }]
keywords = ["document", "ingestion", "pdf", "classifier", "iil"]
dependencies = []

[project.optional-dependencies]
pdf    = ["pdfplumber>=0.11"]
excel  = ["openpyxl>=3.1"]
docx   = ["python-docx>=1.1"]
ocr    = ["pytesseract>=0.3", "pdf2image>=1.17"]
all    = ["iil-ingest[pdf,excel,docx,ocr]"]
django = ["django>=5.0"]
dev   = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "pdfplumber>=0.11",
    "openpyxl>=3.1",
    "pytesseract>=0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["ingest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=ingest --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
